-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1
-
None
-
Linux, 32 bit (arm, but probably not arm related)
-
b0c48cb3a0c9630899a357fb8a01ba13ccad5395(5.4) 02c93808042a5a40f3df4b844ec6722bcdf0d8bb(5.5) c148371e72d900b48cc4790b9e78c6dc1703051a (qtwebengine-chromium 40...based), 140893bef70011645c686f5fabe45018dd2e392a (qtwebengine-chromium 37 based)
A simple qml program that shows a picture and then loads a website with WebEngineView in a loop crashes the whole program with sigpipe after some time.
The website uses javascript and needs a few seconds to load/process on slow devices. Maybe sigpipe gets sent when request could not finish in time, but this should not crash the program.
Is this related to QTBUG-42747 (signal handler fixes)?