<chromium> Always ignore SIGPIPE.

Conditionally running SetupSignalHandlers in the content main runner
led to crashes when SIGPIPE was not ignored.

Task-number: QTBUG-44689
Change-Id: I0eddf52b9f760a23cc66ea5079b87f80d688cbdb
Reviewed-by: Andras Becsi <andras.becsi@theqtcompany.com>
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>